--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -2,15 +2,18 @@ name: Random numbers
 
 on: 
     workflow_dispatch:
-
-
+        inputs:
+            filename:
+                description: 'File to display'
+                required: true
+                default: 'rand.txt'
+    
 jobs:
-    echo_random_number:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Checkout repository
-          uses: actions/checkout@v3
-
-        - name: Echo numbers
-          run: cat rand.txt
-     
+    display_file:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+  
+      - name: Display file contents
+        run: cat ${{ github.event.inputs.filename }}
