--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -18,11 +18,30 @@ jobs:
       - name: Display file contents
         run: cat ${{ github.event.inputs.filename }}
 
-    output-slack:    
+    notify_slack:
         runs-on: ubuntu-latest
         steps:
         - name: Store the output in a variable
           run: |
-            content=$(cat ${{ github.event.inputs.filename }})
-            echo "$content"
-            echo "::set-output name=output::$content"
+                content=$(cat ${{ github.event.inputs.filename }})
+                echo "$content"
+                echo "::set-output name=output::$content"
+        - name: Notify Slack on Job's Success
+          if: ${{ success() }}
+          uses: wearerequired/slack-messaging-action@v1
+          with:
+                  bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
+                  channel: githubactions 
+                  payload: >-
+                    {
+                      "username": "Edmond & Jide",
+                      "attachments": [
+                          { 
+                            "text": "${{ steps.read_file.outputs.file_content }}" 
+                            "footer": "<https://github.com/${{ github.repository }}|${{ github.repository }}>"
+                          }
+                      ]
+                    }
+
+      
+          
