--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -1,49 +1,33 @@
-name: Random numbers
+name: Echo Random Numbers
 
-on: 
-    workflow_dispatch:
-        inputs:
-            filename:
-                description: 'File to display'
-                required: true
-                default: 'rand.txt'
-    
+on:
+  workflow_dispatch:
+
 jobs:
-    echo_file:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-  
-      - name: Display file contents
-        run: cat ${{ github.event.inputs.filename }}
+  read_numbers:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-    notify_slack:
-        runs-on: ubuntu-latest
-        needs: [echo_file]
-        steps:
-        - name: Store the output in a variable
-          run: |
-                content=$(cat ${{ github.event.inputs.filename }})
-                echo "$content"
-                echo "::set-output name=file_content::$content"
-                
-        - name: Notify Slack on Job's Success
-          if: ${{ success() }}
-          uses: wearerequired/slack-messaging-action@v1
-          with:
-                  bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
-                  channel: githubactions 
-                  payload: >-
-                    {
-                      "username": "Edmond & Jide",
-                      "attachments": [
-                          { 
-                            "text": "${{ steps.read_file.outputs.file_content }}" 
-                            "footer": "<https://github.com/${{ github.repository }}|${{ github.repository }}>"
-                          }
-                      ]
-                    }
+    - name: Read file and store content in a variable
+      id: read_file
+      run: |
+        content=$(cat rand.txt)
+        echo "::set-output name=file_content::$content"
 
-      
-          
+  notify_slack:
+    runs-on: ubuntu-latest
+    needs: [read_numbers]  # Wait for read_numbers job to complete
+    if: always()  # Send notification even if read_numbers job fails
+    steps:
+    - name: Send content to Slack
+      if: success()  # Send notification only if read_numbers job succeeds
+      uses: wearerequired/slack-messaging-action@v1
+      with:
+        bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
+        channel: your_slack_channel  # Replace with your Slack channel
+        payload: >
+          {
+            "text": "Contents of numbers.txt: ${{ needs.read_numbers.outputs.file_content }}"
+          }
