--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -2,6 +2,11 @@ name: Echo Random Numbers
 
 on:
   workflow_dispatch:
+    inputs: 
+        filename:
+            description: 'File to display'
+            required: true
+            default: 'rand.txt'
 
 jobs:
   read_numbers:
@@ -13,13 +18,12 @@ jobs:
     - name: Read file and store content in a variable
       id: read_file
       run: |
-        content=$(cat rand.txt)
+        content=$(cat ${{ github.event.inputs }})
         echo "::set-output name=file_content::$content"
 
   notify_slack:
     runs-on: ubuntu-latest
     needs: [read_numbers]  # Wait for read_numbers job to complete
-    if: always()  # Send notification even if read_numbers job fails
     steps:
     - name: Send content to Slack
       if: success()  # Send notification only if read_numbers job succeeds
@@ -29,5 +33,5 @@ jobs:
         channel: your_slack_channel  # Replace with your Slack channel
         payload: >
           {
-            "text": "Contents of numbers.txt: ${{ needs.read_numbers.outputs.file_content }}"
+            "text": "Contents of rand.txt: ${{ needs.read_numbers.outputs.file_content }}"
           }
