--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -40,3 +40,34 @@ jobs:
             "username": "Edmond & Jide",
             "text": "Contents of ${{ github.event.inputs.filename }}: ${{ needs.echo_file.outputs.file_content }}"
           }
+
+  convert_to_json:
+    runs-on: ubuntu-latest
+    needs: [echo_file]
+    if: always()
+    steps:
+    - name: Install jq
+      run: sudo apt-get install jq
+  
+    - name: Convert text file to JSON
+      id: json_convert
+      run: |
+          json=$(jq -R -s -c 'split("\n")[:-1] | map({("item"+(tostring)): .}) | add' rand.txt)
+          echo "::set-output name=json_content::$json"
+    
+    - name: Notify Slack on Job's Success
+      if: success()  # Notify Slack only if previous steps succeed
+      uses: wearerequired/slack-messaging-action@v1
+      with:
+            bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
+            channel: githubactions 
+            payload: >
+                {
+                    "username": "Edmond & Jide",
+                    "text": "Contents of ${{ github.event.inputs.filename }}:",
+                    "attachments": [
+                        {
+                            "text": "$(cat formatted_content.json)"
+                        }
+                    ]
+                }
