--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -42,7 +42,7 @@ jobs:
 
   convert_to_json:
     runs-on: ubuntu-latest
-    needs: echo_file
+    needs: [echo_file]
     if: always()
     steps:
     - name: Install jq
@@ -51,7 +51,7 @@ jobs:
     - name: Convert text file to JSON
       id: json_convert
       run: |
-          json=$(jq -R -s -c 'split("\n")[:-1] | map({("item"+(tostring)): .}) | add' ${{ github.event.inputs.filename }})
+          json=$(jq -R -s -c 'split("\n")[:-1] | map({("item"+(tostring)): .}) | add' ${{ github.event.inputs.filename }}) || echo "conversion failed")
           echo "::set-output name=json_content::$json"
     
     - name: Notify Slack on Job's Success
