--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -20,11 +20,11 @@ jobs:
       run: |
         content=$(cat ${{ github.event.inputs.filename }})
         echo "::set-output name=content::$content"
-        echo "${{ steps.echo_contents.outputs.content }}"
+        echo "Content of ${{ github.event.inputs.filename }}: $content"
 
   notify_slack:
     runs-on: ubuntu-latest
-    needs: echo_file
+    needs: [echo_file]
     if: always()
     steps:
     - name: Notify Slack on Job's Success
@@ -36,7 +36,7 @@ jobs:
         payload: >
           {
             "username": "Edmond & Jide",
-            "text": "Contents of ${{ github.event.inputs.filename }}: ${{ needs.echo_file.outputs.file_content }}"
+            "text":   echo "${{ steps.echo_contents.outputs.content }}"
           }
 
   convert_to_json:
