--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -46,13 +46,13 @@ jobs:
     - name: Install jq
       run: sudo apt-get install jq
   
-    - name: Convert text file to JSON
-      id: json_convert
+    - name: Display file contents and convert to JSON
       run: |
-        json_output=$(jq -Rs '{items: split("\n")[:-1] | to_entries | map({("item" + (.key + 1 | tostring)): .value}) | add}'  <<< "$content")
-        echo "$json_output"
+        content=$(cat ${{ github.event.inputs.filename }})
+        echo "Content of ${{ github.event.inputs.filename }}: $content"
+        json_output=$(echo "$content" | jq -Rs '{items: split("\n")[:-1] | to_entries | map({("item" + (.key + 1 | tostring)): .value}) | add}')
+        echo "JSON Output: $json_output"
 
-    
     - name: Notify Slack on Job's Success
       if: success()
       uses: wearerequired/slack-messaging-action@v1
@@ -62,10 +62,5 @@ jobs:
         payload: >
           {
             "username": "Edmond & Jide",
-            "text": "JSON content of ${{ github.event.inputs.filename }}:",
-            "attachments": [
-              {
-                "text": "${{ steps.json_convert.outputs.json_content }}"
-              }
-            ]
+            "text": "$json_output"
           }
