--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -31,7 +31,7 @@ jobs:
       uses: wearerequired/slack-messaging-action@v1
       with:
         bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
-        channel: 'Gha_interns'
+        channel: 'gha_interns'
         payload: >
           {
             "username": "Edmond & Jide",
@@ -48,8 +48,7 @@ jobs:
   
     - name: Display file contents and convert to JSON
       run: |
-        content=$(cat ${{ github.event.inputs.filename }})
-        echo "Content of ${{ github.event.inputs.filename }}: $content"
+        echo "$content"
         json_output=$(echo "$content" | jq -Rs '{items: split("\n")[:-1] | to_entries | map({("item" + (.key + 1 | tostring)): .value}) | add}')
         echo "JSON Output: $json_output"
 
@@ -58,7 +57,7 @@ jobs:
       uses: wearerequired/slack-messaging-action@v1
       with:
         bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
-        channel: 'Gha_interns'
+        channel: 'gha_interns'
         payload: >
           {
             "username": "Edmond & Jide",
