--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   echo_file:
     runs-on: ubuntu-latest
+    outputs:
+      content: ${{ steps.echo_contents.outputs.content }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -20,15 +22,22 @@ jobs:
       run: |
         content=$(cat "${{ github.event.inputs.filename }}")
         echo "$content"
-        echo "::set-output name=content::$content"
+        echo "content<<EOF" >> $GITHUB_ENV
+        echo "$content" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
+      env:
+        GITHUB_ENV: ${{ runner.temp }}/github_env
 
     - name: Set content output
-      run: echo "content=${{ steps.echo_contents.outputs.content }}" >> $GITHUB_ENV
+      run: echo "content=${{ env.content }}" >> $GITHUB_ENV
+      env:
+        GITHUB_ENV: ${{ runner.temp }}/github_env
+    outputs:
+      content: ${{ env.content }}
 
   notify_slack:
     runs-on: ubuntu-latest
     needs: [echo_file]
-    if: always()
     steps:
     - name: Notify Slack on Job's Success
       if: success()
@@ -45,7 +54,8 @@ jobs:
   convert_to_json:
     runs-on: ubuntu-latest
     needs: [echo_file]
-    if: always()
+    outputs:
+      json_output: ${{ steps.convert_json.outputs.json_output }}
     steps:
     - name: Install jq
       run: sudo apt-get update && sudo apt-get install -y jq
@@ -54,7 +64,13 @@ jobs:
       id: convert_json
       run: |
         json_output=$(echo "${{ needs.echo_file.outputs.content }}" | jq -Rs '{items: split("\n")[:-1] | to_entries | map({("item" + (.key + 1 | tostring)): .value}) | add}')
-        echo "::set-output name=json_output::$json_output"
+        echo "json_output<<EOF" >> $GITHUB_ENV
+        echo "$json_output" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
+      env:
+        GITHUB_ENV: ${{ runner.temp }}/github_env
+     outputs:
+      json_output: ${{ env.json_output }}
 
     - name: Notify Slack with JSON
       if: success()
@@ -65,5 +81,5 @@ jobs:
         payload: |
           {
             "username": "Edmond & Jide",
-            "text": "${{ steps.convert_json.outputs.json_output }}"
+            "text": "${{ needs.convert_to_json.outputs.json_output }}"
           }
