--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -32,6 +32,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.26.0
         with:
            # For posting a rich message using Block Kit
+            channel-id: 'gha_interns'
             payload: |
                 {             
                     "text": "File processed: ${{ needs.process-file.outputs.file-content }}"
