--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -29,13 +29,12 @@ jobs:
     if: always()
     steps:
       - name: Send notification to Slack
+        if: ${{success()}}
         uses: slackapi/slack-github-action@v1.26.0
         with:
-           # For posting a rich message using Block Kit
-            channel-id: 'gha_interns'
-            payload: |
-                {             
-                    "text": "File processed: ${{ needs.process-file.outputs.file-content }}"
-                }
-        env:
-         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+         channel: gha_interns 
+         payload: >-
+            {
+                "text": "File processed: ${{ needs.process-file.outputs.file-content }}"
+            }      
