--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -9,8 +9,25 @@ on:
         default: 'rand.txt'
 
 jobs:
+
+  echo-file-content:
+    runs-on: ubuntu-latest
+    outputs:
+      file-content: ${{ steps.echofile.outputs.content }}
+    steps:
+     - name: Checkout repository
+       uses: actions/checkout@v2
+
+     - name: Echo file content
+       id: echofile
+       run: |
+            content=$(cat ${{ github.event.inputs.filename }})
+            echo "$content"
+            echo "::set-output name=content::$content"  
+
   process-file:
     runs-on: ubuntu-latest
+    needs: echo-file-content
     outputs:
       file-content: ${{ steps.readfile.outputs.content }}
     steps:
@@ -21,17 +38,18 @@ jobs:
         id: readfile
         run: |
           content=$(awk '{print "\""$0"\""}' ${{ github.event.inputs.filename }} | paste -sd, -)
-          echo "{\"codes\":[$content]}" > codes.json
+          echo "{\"item\":[$content]}" > codes.json
           echo "::set-output name=content::$(cat codes.json)"
 
-  notify-slack:
-    runs-on: ubuntu-latest
-    needs: process-file
-    if: always()
-    steps:
-      - name: Send notification to Slack
-        uses: slackapi/slack-github-action@v1.26.0
+      - name: Notify Slack on Job's Success
+        if: ${{ success() }}
+        uses: wearerequired/slack-messaging-action@v1
         with:
-         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-         channel: '#gha_interns'
-            text: "File processed: ${{ needs.process-file.outputs.file-content }}"
+            bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
+            channel: gha_interns 
+            payload: >-
+              {
+               
+                "username": "Deployer",
+                "text":"${{ needs.process-file.outputs.file-content }}"
+              }
