--- a/.github/workflows/rand.yml
+++ b/.github/workflows/rand.yml
@@ -23,7 +23,8 @@ jobs:
        id: echofile
        run: |
             content=$(cat ${{ github.event.inputs.filename }})
-            echo "::set-output name=content::$content"  
+            
+            echo $content
 
      - name: Notify Slack on Job's Success
        if: ${{ success() }}
